--- a/pages/mainpage.html
+++ b/pages/mainpage.html
@@ -135,7 +135,7 @@
           <p class="lead text-muted">작성한 게임기획 포트폴리오에 대한 전반적인 내역 등을 적으세요.</p>
           <p>
             <a href="/pages/sub01.html" class="btn btn-warning my-2">PM's DIARY</a>
-            <a href="/pages/sub02.html" class="btn btn-info my-2">■■ 아쿠아리움</a>
+            <a href="/pages/sub02.html" class="btn btn-info my-2">감자도리의 모험</a>
             <a href="/pages/sub03.html" class="btn btn-success my-2">SHY Sun 팀</a>
             <a href="/pages/sub04.html" class="btn btn-primary my-2">저녁밤하늘 팀</a>
             <a href="https://www.notion.so/b5bdeae1389b44ab8bf69b9a0b889be4?pvs=4" class="btn btn-dark my-2">My notion</a>
@@ -166,11 +166,11 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/images/아쿠아리움_시작화면.png" class="d-block w-100" alt="아쿠아리움">
+                <img src="/images/아쿠아리움_시작화면.png" class="d-block w-100" alt="감자도리의 모험">
                 <div class="carousel-caption d-none d-md-block">
-                  <a href="/pages/sub02.html" class="btn btn-outline-info">■■ 아쿠아리움</a>
-                  <h5>쯔꾸르 공포, 탈출</h5>
-                  <p>영문도 모른 채 아쿠아리움에서 눈을 뜨게 된 주인공. 무사히 이곳을 탈출할 수 있을까?</p>
+                  <a href="/pages/sub02.html" class="btn btn-outline-info">감자도리의 모험</a>
+                  <h5>모험 RPG</h5>
+                  <p>고구마가 되고싶어했던 감자도리의 잊혀진 뒷이야기를 RPG 모험으로 만나요</p>
                 </div>
               </div>
               <div class="carousel-item">
@@ -182,11 +182,11 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/images/spaceship04.jpg" class="d-block w-100" alt="우주선4">
+                <img src="/images/아쿠아리움_시작화면.png" class="d-block w-100" alt="아쿠아리움">
                 <div class="carousel-caption d-none d-md-block">
-                  <a href="/pages/sub04.html" class="btn btn-outline-primary">저녁밤하늘 팀프로젝트 - 감자도리의 모험</a>
-                  <h5>모험 RPG</h5>
-                  <p>고구마가 되고싶어했던 감자도리의 잊혀진 뒷이야기를 RPG 모험으로 만나요</p>
+                  <a href="/pages/sub04.html" class="btn btn-outline-primary">저녁밤하늘 팀프로젝트 - ■■ 아쿠아리움</a>
+                  <h5>쯔꾸르 공포, 탈출</h5>
+                  <p>영문도 모른 채 아쿠아리움에서 눈을 뜨게 된 주인공. 무사히 이곳을 탈출할 수 있을까?</p>
                 </div>
               </div>
               <!-- <div class="carousel-item">
