--- a/pages/sub04.html
+++ b/pages/sub04.html
@@ -150,7 +150,7 @@
               <img src="/images/spaceship01.jpg" class="card-img-top" alt="우주선1">
               <div class="card-body">
                 <h5 class="card-title">UI Design</h5>
-                <p class="card-text">감자도리의 모험 UI</p>
+                <p class="card-text">■■ 아쿠아리움 UI</p>
                 <a href="/pages/page01.html" class="btn btn-dark">기획서보기</a>
                 <a href="/pages/page01-1.html" class="btn btn-info">IA보기</a>
               </div>
@@ -171,18 +171,18 @@
               <img src="/images/spaceship03.jpg" class="card-img-top" alt="우주선3">
               <div class="card-body">
                 <h5 class="card-title">GDD</h5>
-                <p class="card-text">감자도리의 모험의 Game Design Document</p>
+                <p class="card-text">■■ 아쿠아리움의 Game Design Document</p>
                 <a href="/pages/page03.html" class="btn btn-dark">기획서보기</a>
               </div>
             </div>
           </div>
-          <!-- <div class="col">
+          <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship04.jpg" class="card-img-top" alt="우주선4">
               <div class="card-body">
-                <h5 class="card-title">당잠사의 전투시스템</h5>
-                <p class="card-text">온라인 필드 베이스 다대다 전투 환경의 전투 디자인</p>
-                <a href="/pages/page04.html" class="btn btn-dark">문서보기</a>
+                <h5 class="card-title">퇴근하겠습니다</h5>
+                <p class="card-text">퇴근욕구를 대리 실현할 벨트스크롤 액션 게임</p>
+                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">아이템 디자인</a>
               </div>
             </div>
           </div>
@@ -190,9 +190,9 @@
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship05.jpg" class="card-img-top" alt="우주선5">
               <div class="card-body">
-                <h5 class="card-title">채팅시스템</h5>
-                <p class="card-text">UI디자인 중 채팅에 대한 모든 시스템</p>
-                <a href="/pages/page05.html" class="btn btn-dark">문서보기</a>
+                <h5 class="card-title">Operation : Midnight</h5>
+                <p class="card-text">4인4색 플레이어블 캐릭터의 FPS 액션 게임</p>
+                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">몬스터 디자인</a>
               </div>
             </div>
           </div>
@@ -200,8 +200,38 @@
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship06.jpg" class="card-img-top" alt="우주선6">
               <div class="card-body">
-                <h5 class="card-title">경매장시스템</h5>
-                <p class="card-text">게임 내 상품과 재화를 교환하는 공공 거래 시스템을 주관하는 곳의 디자인</p>
+                <h5 class="card-title">Night (E)scape</h5>
+                <p class="card-text">초심과 동심을 찾아 떠나는 플래포머 여정</p>
+                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">UI 디자인</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm" width="100%">
+              <img src="/images/spaceship06.jpg" class="card-img-top" alt="우주선6">
+              <div class="card-body">
+                <h5 class="card-title">별빛 아래의 탈출</h5>
+                <p class="card-text">현대인들에게 희망을. 3D 방탈출 게임</p>
+                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">레벨 디자인</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm" width="100%">
+              <img src="/images/spaceship06.jpg" class="card-img-top" alt="우주선6">
+              <div class="card-body">
+                <h5 class="card-title">조퇴하겠습니다</h5>
+                <p class="card-text">퇴근하겠습니다 게임의 스핀오프 후속작!</p>
+                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">@@ 디자인</a>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col">
+            <div class="card shadow-sm" width="100%">
+              <img src="/images/spaceship06.jpg" class="card-img-top" alt="우주선6">
+              <div class="card-body">
+                <h5 class="card-title">기획서9</h5>
+                <p class="card-text">블라블라~ 기획서6의 내용을 간략하게 적으세요.</p>
                 <a href="/pages/page06.html" class="btn btn-dark">문서보기</a>
               </div>
             </div>
