--- a/pages/sub04.html
+++ b/pages/sub04.html
@@ -132,8 +132,8 @@
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">모험 RPG</h1>
-          <p class="lead text-muted">추억의 캐릭터 감자도리와 함께 떠나는 따뜻한 모험 이야기</p>
+          <h1 class="fw-light">2D 탑뷰 아쿠아리움 탈출</h1>
+          <p class="lead text-muted">수상한 아쿠아리움에 끌려오게 된 주인공, 무사히 탈출할 수 있을까?</p>
           <p>
             <a href="https://www.youtube.com/watch?v=O1Uh6Vl08zg" class="btn btn-success my-2">레벨 시연 영상 보기</a>
             <a href="https://www.youtube.com/watch?v=d69GbPPFHk8" class="btn btn-success my-2">UI 시연 영상 보기</a>
@@ -221,7 +221,7 @@
               <img src="/images/spaceship06.jpg" class="card-img-top" alt="우주선6">
               <div class="card-body">
                 <h5 class="card-title">조퇴하겠습니다</h5>
-                <p class="card-text">퇴근하겠습니다 게임의 스핀오프 후속작!</p>
+                <p class="card-text">퇴근하겠습니다 게임의 스핀오프 후속작</p>
                 <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">@@ 디자인</a>
               </div>
             </div>
