--- a/pages/sub01.html
+++ b/pages/sub01.html
@@ -151,7 +151,7 @@
               <div class="card-body">
                 <h5 class="card-title">UI Design</h5>
                 <p class="card-text">PM's DIARY의 UI</p>
-                <a href="/pages/page01.html" class="btn btn-dark">기획서보기</a>
+                <a href="/contents/PM's DIARY UXUI 기획서.pdf" class="btn btn-dark">기획서보기</a>
                 <a href="/images/포메_씬플로우_2.svg" class="btn btn-dark">IA보기</a>
               </div>
             </div>
