PM's DIARY 파일네임룰
파일네임룰 5/23 수정본 업데이트

--- a/pages/sub04.html
+++ b/pages/sub04.html
@@ -182,8 +182,8 @@
               <div class="card-body">
                 <h5 class="card-title">퇴근하겠습니다</h5>
                 <p class="card-text">퇴근욕구를 대리 실현할 벨트스크롤 액션 게임</p>
-                <a href="https://gratis-unicorn-6aa.notion.site/Get-Out-My-Way-Home-bdc6149a29114af59b11f1a5c0d257da" class="btn btn-warning">Notion</a>
-                <a href="/contents/퇴근하겠습니다-아이템.p" class="btn btn-warning">아이템 디자인</a>
+                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">Notion</a>
+                <a href="/contents/퇴근하겠습니다-아이템.pdf" class="btn btn-dark">아이템 디자인</a>
               </div>
             </div>
           </div>
@@ -193,8 +193,8 @@
               <div class="card-body">
                 <h5 class="card-title">Operation : Midnight</h5>
                 <p class="card-text">4인4색 플레이어블 캐릭터의 FPS 액션 게임</p>
-                <a href="https://www.notion.so/Operation-Midnight-cd66985d8b944612b7c5e1dbb17ed8d5" class="btn btn-success">Notion</a>
-                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-success">몬스터 디자인</a>
+                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">Notion</a>
+                <a href="/contents/OM 무기 디자인.pdf" class="btn btn-dark">몬스터 디자인</a>
               </div>
             </div>
           </div>
@@ -204,8 +204,8 @@
               <div class="card-body">
                 <h5 class="card-title">Night (E)scape</h5>
                 <p class="card-text">초심과 동심을 찾아 떠나는 플래포머 여정</p>
-                <a href="https://www.notion.so/Night-E-scape-93dfaee137584d48ac1c8aec46c5a52d" class="btn btn-info">Notion</a>
-                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-info">UI 디자인</a>
+                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">Notion</a>
+                <a href="/contents/Night Escape UXUI 기획서.pdf" class="btn btn-dark">UI 디자인</a>
               </div>
             </div>
           </div>
@@ -215,8 +215,8 @@
               <div class="card-body">
                 <h5 class="card-title">별빛 아래의 탈출</h5>
                 <p class="card-text">현대인들에게 희망을. 3D 방탈출 게임</p>
-                <a href="https://www.notion.so/d2942333dd3f4657a89bf58af9a65cd5" class="btn btn-info">Notion</a>
-                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-info">레벨 디자인</a>
+                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">Notion</a>
+                <a href="/contents/별아탈 렙디 문서.pdf" class="btn btn-dark">레벨 디자인</a>
               </div>
             </div>
           </div>
@@ -226,7 +226,6 @@
               <div class="card-body">
                 <h5 class="card-title">조퇴하겠습니다</h5>
                 <p class="card-text">퇴근하겠습니다 게임의 스핀오프 후속작</p>
-                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">Notion</a>
                 <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">@@ 디자인</a>
               </div>
             </div>
