게임 레벨 기획 업데이트
임시로 파일 업데이트 해보는 것이므로 추후 수정할 예정

--- a/pages/sub01.html
+++ b/pages/sub01.html
@@ -172,7 +172,7 @@
               <div class="card-body">
                 <h5 class="card-title">GDD</h5>
                 <p class="card-text">PM's DIARY의 Game Design Document</p>
-                <a href="/contents/PM's DIARY 기획서.pdf" class="btn btn-dark">기획서보기</a>
+                <a href="/contents/게임레벨기획_윤다희.pdf" class="btn btn-dark">기획서보기</a>
                 <a href="/contents/PM's DIARY File Name Rule.pdf" class="btn btn-dark">파일네임룰</a>
               </div>
             </div>
