--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
   <meta property="og:title" content="YDH's Portfoilo" />
   <meta property="og:description" content="PM's DIARY, ■■ 아쿠아리움, 여우볕마을, 다양한 게임기획 모음" />
   <meta property="og:image" content="./images/name_seo.png" />
-  <!-- 아텐츠주소 대신 자신의 웹페이지 주소로 바꾸세요 -->
   <meta property="og:url" content="https://ydhwebsite03.netlify.app" />
   <meta property="twitter:card" content="summary" />
   <meta property="twitter:site" content="윤다희의 게임기획" />
   <meta property="twitter:title" content="YDH's Portfoilo" />
   <meta property="twitter:description" content="PM's DIARY, ■■ 아쿠아리움, 여우볕마을, 다양한 게임기획 모음" />
   <meta property="twitter:image" content="./images/name_seo.png" />
-  <!-- 아텐츠주소 대신 자신의 웹페이지 주소로 바꾸세요 -->
   <meta property="twitter:url" content="https://ydhwebsite03.netlify.app" />
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <link rel="icon" href="/favicon.ico" />
@@ -33,10 +31,22 @@
 
 <body>
   <div class="text-box">
-    <div class="heading">윤다희의 게임기획</div>
-    <div class="button-wrapper">
-      <div class="button"><a href="/pages/mainpage.html">기획서보기</a></div>
+    <!-- 이 밑에 3줄이 새로운 텍스트 타이틀-->
+    <div class="heading">
+      <img src="/images/감동이있는게임기획보관함.png" alt="감동이 있는 게임기획보관함">
     </div>
+    <!--  이 밑의 줄이 원래 텍스트 타이틀
+    <div class="heading">감동이 있는 게임기획보관함</div> -->
+    <!-- 이 밑의 다섯줄로 텍스트 버튼을 이미지 버튼으로 변경함. 그런데 가운데정렬이 안됨.-->
+    <div class="button">
+      <a href="/pages/mainpage.html">
+        <img src="/images/열어보기.png" alt="Button Text">
+      </a>
+    </div>
+    <!-- 얘가 원래 있었던 텍스트 버튼 코드
+     <div class="button-wrapper">
+      <div class="button"><a href="/pages/mainpage.html">열어보기</a></div>
+    </div> -->
   </div>
   <script src="/three.min.js"></script>
   <script>
