디자인 수정 및 문서 추가

--- a/pages/sub01.html
+++ b/pages/sub01.html
@@ -132,11 +132,11 @@
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">포션 크래프팅과 가게 운영 시뮬레이션</h1>
+          <h1 class="fw-light">포션 크래프트</h1>
           <p class="lead text-muted">연금술사가 되어 포션 크래프팅과 가게 운영을 즐겨보자!</p>
           <p>
-            <a href="https://www.youtube.com/watch?v=O1Uh6Vl08zg" class="btn btn-warning my-2">레벨 시연 영상 보기</a>
-            <a href="https://www.youtube.com/watch?v=d69GbPPFHk8" class="btn btn-warning my-2">UI 시연 영상 보기</a>
+            <!-- <a href="https://www.youtube.com/watch?v=O1Uh6Vl08zg" class="btn btn-warning my-2">레벨 시연 영상 보기</a>
+            <a href="https://www.youtube.com/watch?v=d69GbPPFHk8" class="btn btn-warning my-2">UI 시연 영상 보기</a> -->
           </p>
         </div>
       </div>
@@ -156,7 +156,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <!-- <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship02.jpg" class="card-img-top" alt="우주선2">
               <div class="card-body">
@@ -165,14 +165,14 @@
                 <a href="/pages/page02.html" class="btn btn-dark">기획서보기</a>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship03.jpg" class="card-img-top" alt="우주선3">
               <div class="card-body">
                 <h5 class="card-title">GDD</h5>
                 <p class="card-text">PM's DIARY의 Game Design Document</p>
-                <a href="/contents/게임레벨기획_윤다희.pdf" class="btn btn-dark">기획서보기</a>
+                <a href="/contents/PM's DIARY 기획서.pdf" class="btn btn-dark">기획서보기</a>
                 <a href="/contents/PM's DIARY File Name Rule.pdf" class="btn btn-dark">파일네임룰</a>
               </div>
             </div>
