--- a/pages/sub03.html
+++ b/pages/sub03.html
@@ -135,14 +135,14 @@
           <h1 class="fw-light">힐링 농사 시뮬레이션</h1>
           <p class="lead text-muted">아름다운 풍경속에서 즐기는 여유로운 힐링 농경 생활</p>
           <p>
-            <a href="https://www.youtube.com/watch?v=O1Uh6Vl08zg" class="btn btn-success my-2">레벨 시연 영상 보기</a>
-            <a href="https://www.youtube.com/watch?v=d69GbPPFHk8" class="btn btn-success my-2">UI 시연 영상 보기</a>
+            <!-- <a href="https://www.youtube.com/watch?v=O1Uh6Vl08zg" class="btn btn-success my-2">레벨 시연 영상 보기</a>
+            <a href="https://www.youtube.com/watch?v=d69GbPPFHk8" class="btn btn-success my-2">UI 시연 영상 보기</a> -->
           </p>
         </div>
       </div>
     </section>
 
-    <div class="album py-5 bg-success">
+    <div class="album py-5 bg-light">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
@@ -151,12 +151,12 @@
               <div class="card-body">
                 <h5 class="card-title">UI Design</h5>
                 <p class="card-text">여우볕마을 UI디자인에 대하여</p>
-                <a href="/pages/page01.html" class="btn btn-dark">기획서보기</a>
+                <!-- <a href="/pages/page01.html" class="btn btn-dark">기획서보기</a> -->
                 <a href="/images/여우볕마을 씬플로우.drawio.svg" class="btn btn-info">IA보기</a>
               </div>
             </div>
           </div>
-          <div class="col">
+          <!-- <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship02.jpg" class="card-img-top" alt="우주선2">
               <div class="card-body">
@@ -172,10 +172,10 @@
               <div class="card-body">
                 <h5 class="card-title">GDD</h5>
                 <p class="card-text">여우볕마을 Game Design Document</p>
-                <a href="/pages/page03.html" class="btn btn-dark">기획선보기</a>
+                <a href="/pages/page03.html" class="btn btn-dark">기획서보기</a>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship04.jpg" class="card-img-top" alt="우주선4">
