--- a/pages/sub04.html
+++ b/pages/sub04.html
@@ -91,7 +91,7 @@
 <body>
 
   <header>
-    <div class="collapse bg-success" id="navbarHeader">
+    <div class="collapse bg-dark" id="navbarHeader">
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-md-7 py-4">
@@ -118,7 +118,7 @@
             viewBox="0 0 24 24">
             <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
             <circle cx="12" cy="13" r="4" /></svg>
-          <strong>감자도리의 모험</strong>
+          <strong>Beginning</strong>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
           aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
@@ -132,31 +132,31 @@
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">2D 탑뷰 아쿠아리움 탈출</h1>
-          <p class="lead text-muted">수상한 아쿠아리움에 끌려오게 된 주인공, 무사히 탈출할 수 있을까?</p>
+          <h1 class="fw-light">1주기획 프로젝트</h1>
+          <p class="lead text-muted">프로젝트와 함께 담당 기획파트가 바뀌는 1주기획 프로젝트!</p>
           <p>
-            <a href="https://www.youtube.com/watch?v=O1Uh6Vl08zg" class="btn btn-success my-2">레벨 시연 영상 보기</a>
-            <a href="https://www.youtube.com/watch?v=d69GbPPFHk8" class="btn btn-success my-2">UI 시연 영상 보기</a>
+            <!-- <a href="https://www.youtube.com/watch?v=O1Uh6Vl08zg" class="btn btn-success my-2">레벨 시연 영상 보기</a>
+            <a href="https://www.youtube.com/watch?v=d69GbPPFHk8" class="btn btn-success my-2">UI 시연 영상 보기</a> -->
           </p>
         </div>
       </div>
     </section>
 
-    <div class="album py-5 bg-success">
+    <div class="album py-5 bg-light">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship01.jpg" class="card-img-top" alt="우주선1">
               <div class="card-body">
-                <h5 class="card-title">UI Design</h5>
-                <p class="card-text">■■ 아쿠아리움 UI</p>
-                <a href="/pages/page01.html" class="btn btn-dark">기획서보기</a>
-                <a href="/pages/page01-1.html" class="btn btn-info">IA보기</a>
+                <h5 class="card-title">■■ 아쿠아리움</h5>
+                <p class="card-text">희망을 찾아 헤매는 미스테리 쯔꾸르</p>
+                <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">Notion</a>
+                <!-- <a href="/pages/page01-1.html" class="btn btn-dark">IA보기</a> -->
               </div>
             </div>
           </div>
-          <div class="col">
+          <!-- <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship02.jpg" class="card-img-top" alt="우주선2">
               <div class="card-body">
@@ -175,13 +175,13 @@
                 <a href="/pages/page03.html" class="btn btn-dark">기획서보기</a>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship04.jpg" class="card-img-top" alt="우주선4">
               <div class="card-body">
                 <h5 class="card-title">퇴근하겠습니다</h5>
-                <p class="card-text">퇴근욕구를 대리 실현할 벨트스크롤 액션 게임</p>
+                <p class="card-text">퇴근욕구 대리 실현! 벨트스크롤 액션 게임</p>
                 <a href="https://www.notion.so/75980a48bc2a4cccb46b7fea2708110a?pvs=4" class="btn btn-dark">Notion</a>
                 <a href="/contents/퇴근하겠습니다-아이템.pdf" class="btn btn-dark">아이템 디자인</a>
               </div>
