--- a/pages/sub02.html
+++ b/pages/sub02.html
@@ -135,8 +135,8 @@
           <h1 class="fw-light">쯔꾸르 공포 미스테리 탈출</h1>
           <p class="lead text-muted">눈을 떠보니 오게 된 아쿠아리움의 비밀을 밝히고 탈출할 수 있을까?</p>
           <p>
-            <a href="https://www.youtube.com/watch?v=O1Uh6Vl08zg" class="btn btn-info my-2">레벨 시연 영상 보기</a>
-            <a href="https://www.youtube.com/watch?v=d69GbPPFHk8" class="btn btn-info my-2">UI 시연 영상 보기</a>
+            <!-- <a href="https://www.youtube.com/watch?v=O1Uh6Vl08zg" class="btn btn-info my-2">레벨 시연 영상 보기</a>
+            <a href="https://www.youtube.com/watch?v=d69GbPPFHk8" class="btn btn-info my-2">UI 시연 영상 보기</a> -->
           </p>
         </div>
       </div>
@@ -151,12 +151,12 @@
               <div class="card-body">
                 <h5 class="card-title">UI Design</h5>
                 <p class="card-text">■■ 아쿠아리움의 UI</p>
-                <a href="/pages/page01.html" class="btn btn-dark">기획서보기</a>
-                <a href="/pages/page01-1.html" class="btn btn-dark">IA보기</a>
+                <a href="/contents/개인기획_■■아쿠아리움UI기획서_윤다희_20240909.pdf" class="btn btn-dark">기획서보기</a>
+                <a href="https://drive.google.com/file/d/1mbNhaavZOCj9yLNekvMvmN8IcnLST22J/view?usp=sharingl" class="btn btn-dark">IA보기</a>
               </div>
             </div>
           </div>
-          <div class="col">
+          <!-- <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship02.jpg" class="card-img-top" alt="우주선2">
               <div class="card-body">
@@ -165,7 +165,7 @@
                 <a href="/pages/page02.html" class="btn btn-dark">기획서보기</a>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/spaceship03.jpg" class="card-img-top" alt="우주선3">
